# Field-Experiment-AI-Agent

./: .gitignore  AI_survey_human.ipynb  README.md  enhanced.json  enhanced_survey.json  jcr_agent.py  knowledge_sources.py  manlu+shijian.ipynb  reference.xlsx  requirements.txt  research_paper_20250627_161704.md  research_paper_20250627_210522.md  research_paper_20250627_215348.md  research_paper_20250627_222338.md  research_paper_20250709_121153.md  research_paper_20250911_150314.md  server.py  simulated_survey_responses.csv  simulated_survey_responses.json  simulated_survey_responses_debiased.csv  simulated_survey_responses_debiased.json  survey.html  survey.py  survey_SV_3NPygeRtX1iKazk_detailed_20250625_163902.csv  survey_SV_6nkUCABm1WWeUiq_detailed_formatted_20250627_221723.csv  survey_SV_9FS0kJVw5lkCcUm_detailed_20250627_161440.csv  survey_SV_9FS0kJVw5lkCcUm_detailed_formatted_20250627_215115.csv  survey_SV_cG4jLVF7d0bTgY6_detailed_20250627_210034.csv  survey_distribution&collection.ipynb  survey_distribution&collection_typeform.ipynb  survey_logic.py  survey_responses_20250513_135954.csv  survey_responses_20250513_185527.csv  survey_v2.html  test.py  version 5.ipynb  version1.ipynb  version2.ipynb  version3.ipynb  version4.py  (+3 more)
.ipynb_checkpoints/: survey_distribution&collection-checkpoint.ipynb
debias/: debias with transfer learning.ipynb  debias.py  (+5 more)
field_experiment_ai_agent/: README.md  pyproject.toml
field_experiment_ai_agent/src/field_experiment_ai_agent/: crew.py  main.py
field_experiment_ai_agent/src/field_experiment_ai_agent/config/: tasks.yaml
(+194 files in other folders)
