[project]
name = "field_experiment_ai_agent"
version = "0.1.0"
description = "field_experiment_ai_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
field_experiment_ai_agent = "field_experiment_ai_agent.main:run"
run_crew = "field_experiment_ai_agent.main:run"
train = "field_experiment_ai_agent.main:train"
replay = "field_experiment_ai_agent.main:replay"
test = "field_experiment_ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
